--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "fimbrethil",
   "version": "1.0.0",
   "description": "entity component system javascript and typescript",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/types/index.d.ts",
   "directories": {
     "example": "examples"
   },
   "scripts": {
-    "test": "test",
-    "build": "tsc && rollup -c"
+    "test": "mocha",
+    "coverage": "nyc --reporter lcov --reporter text-summary mocha",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -25,8 +27,15 @@
   },
   "homepage": "https://github.com/emilekberg/fimbrethil#readme",
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@rollup/plugin-typescript": "^4.0.0",
+    "@types/chai": "^4.2.10",
+    "@types/mocha": "^7.0.2",
+    "chai": "^4.2.0",
+    "mocha": "^7.1.0",
+    "nyc": "^15.0.0",
     "rollup": "^2.0.2",
+    "ts-node": "^8.6.2",
     "tslib": "^1.11.1",
     "typescript": "^3.8.3"
   }
