--- a/.mocharc.json
+++ b/.mocharc.json
@@ -7,7 +7,7 @@
   "reporter": "dot",
   "spec": "src/**/*.spec.ts",
   "file": [
-    
+    "src/index.ts"
   ],
   "package": "./package.json",
   "watch-files": ["src/**/*.ts"]
