build: wrong root copied

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
 
     # Creates dist folder
     - run: mkdir www
-    - run: cp -R ./dist/. ./www/
-    - run: cp -R ./examples/ ./www/
+    - run: cp -R ./dist/ ./www/
+    - run: cp -R ./examples/. ./www/
     
     # Deploy to github pages
     - name: Deploy to GitHub Pages
